# discord-feur-bot-rs

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Justfile  bacon.toml  replies.json  replies.toml
src/: config.rs  handler.rs  main.rs  presence.rs
