[package]
name = "discord-feur-bot-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
lazy_static = "1.4.0"
rand = "0.8.5"
regex = "1.8.4"
serde = { version = "1.0.164", features = ["derive"] }
serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.28.2", features = ["full"] }
toml = "0.8.2"
